--- a/fgw/todo
+++ b/fgw/todo
@@ -1,22 +1,9 @@
-项目类型
 导出报表
-不要绿色 正常的就白色
-都不要汇报
-存在的困难和问题以及下一步工作建议和安排
-当月投资
-不要填报情况
-不要累计投资
-当年累计投资
-不要储备项目汇报 项目两库建设
-茅箭区投资和项目直报平台
-填报情况 不要
-建设性质 新建 续建
-建设阶段 前期准备 开工 完工
+
 开工 竣工时间 选择年月
 建设期限 哪一年到那一年
-本月完成投资
-本年累计完整投资
-投资主体: 企业 区级政府 市级政府
+
+新建项目?
 
 
 report form
